--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 /*
 Theme Name: Planova Theme
-Author: ستایش و هانیه
-Description: قالب اختصاصی برای پروژه Planova
-Version: 1.0
+Author: Setayesh and Haniyeh
+Version: 1.2
 */
